--- a/server.properties
+++ b/server.properties
@@ -11,7 +11,7 @@ enforce-secure-profile=true
 level-name=world
 motd=A Minecraft Server
 query.port=25565
-pvp=true
+pvp=false
 generate-structures=true
 max-chained-neighbor-updates=1000000
 difficulty=easy
@@ -25,7 +25,7 @@ enable-status=true
 allow-flight=false
 initial-disabled-packs=
 broadcast-rcon-to-ops=true
-view-distance=10
+view-distance=24
 server-ip=
 resource-pack-prompt=
 allow-nether=true
