--- a/server.properties
+++ b/server.properties
@@ -43,7 +43,7 @@ player-idle-timeout=0
 force-gamemode=false
 rate-limit=0
 hardcore=false
-white-list=false
+white-list=true
 broadcast-console-to-ops=true
 spawn-npcs=true
 spawn-animals=true
