--- a/.github/workflows/terraform-apply.yaml
+++ b/.github/workflows/terraform-apply.yaml
@@ -41,8 +41,7 @@ jobs:
         if: fromJSON(steps.apply-run.outputs.payload).data.attributes.actions.IsConfirmable
         id: apply
         with:
-          run: 
-          export TF_VAR_aws_access_key= ${{ secrets.AWS_ACCESS_KEY }}
-          export TF_VAR_aws_secret_key= ${{ secrets.AWS_SECRET_KEY }}
-          ${{ steps.apply-run.outputs.run_id }}
+          run: ${{ steps.apply-run.outputs.run_id }}
+          run: export TF_VAR_aws_access_key= ${{ secrets.AWS_ACCESS_KEY }}
+          run: export TF_VAR_aws_secret_key= ${{ secrets.AWS_SECRET_KEY }}
           comment: "Apply Run from GitHub Actions CI ${{ github.sha }}"
