--- a/.github/workflows/terraform-apply.yaml
+++ b/.github/workflows/terraform-apply.yaml
@@ -9,6 +9,8 @@ env:
   TF_CLOUD_ORGANIZATION: "led0nk"
   TF_API_TOKEN: "${{ secrets.TF_API_TOKEN }}"
   TF_WORKSPACE: "minecraft"
+  TF_VAR_aws_access_key: "${{ secrets.AWS_ACCESS_KEY }}"
+  TF_VAR_aws_secret_key: "${{ secrets.AWS_SECRET_KEY }}"
   CONFIG_DIRECTORY: "./"
 
 jobs:
@@ -41,8 +43,5 @@ jobs:
         if: fromJSON(steps.apply-run.outputs.payload).data.attributes.actions.IsConfirmable
         id: apply
         with:
-          run: |
-          export TF_VAR_aws_access_key= ${{ secrets.AWS_ACCESS_KEY }}
-          export TF_VAR_aws_secret_key= ${{ secrets.AWS_SECRET_KEY }}
-          ${{ steps.apply-run.outputs.run_id }}
+          run: ${{ steps.apply-run.outputs.run_id }}
           comment: "Apply Run from GitHub Actions CI ${{ github.sha }}"
