--- a/.github/workflows/terraform-plan.yaml
+++ b/.github/workflows/terraform-plan.yaml
@@ -7,8 +7,8 @@ env:
   TF_CLOUD_ORGANIZATION: "led0nk"
   TF_API_TOKEN: "${{ secrets.TF_API_TOKEN }}"
   TF_WORKSPACE: "minecraft"
-  TF_VAR_aws_access_key: "${{ secrets.AWS_ACCESS_KEY }}"
-  TF_VAR_aws_secret_key: "${{ secrets.AWS_SECRET_KEY }}"
+  #TF_VAR_aws_access_key: "${{ secrets.AWS_ACCESS_KEY }}"
+  #TF_VAR_aws_secret_key: "${{ secrets.AWS_SECRET_KEY }}"
   CONFIG_DIRECTORY: "./"
 
 jobs:
